--- a/_about-wrps/collection.yml
+++ b/_about-wrps/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-wrps:
     output: true
     order:
+      - Our Identity/School Song.md
       - Our Identity/School Crest.md
       - Our Identity/.keep
       - Organisational Chart 2022/School Management Committee.md
