--- a/_about-wrps/collection.yml
+++ b/_about-wrps/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-wrps:
     output: true
     order:
+      - Our Heritage.md
       - Our Identity/School Rules.md
       - Our Identity/School Vision, Mission, Motto, Philosophy and Core Values.md
       - Our Identity/Desired Outcomes of Education.md
