--- a/_about-wrps/collection.yml
+++ b/_about-wrps/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-wrps:
     output: true
     order:
+      - Privacy Policy/.keep
       - Our Achievements.md
       - Our Heritage.md
       - Our Identity/School Rules.md
