--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -2,5 +2,6 @@ collections:
   teams:
     output: true
     order:
+      - English Academic Team/Hooked On Reading.md
       - English Academic Team/English Academic Team.md
       - English Academic Team/.keep
