--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -2,6 +2,7 @@ collections:
   teams:
     output: true
     order:
+      - PE, CCAS and Aesthetics Teams/PE, CCAS and Aesthetics Teams.md
       - PE, CCAS and Aesthetics Teams/.keep
       - ICT Team.md
       - Mother Tongue Academic Teams/Tamil Language Unit.md
