--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -2,6 +2,7 @@ collections:
   teams:
     output: true
     order:
+      - CCA/.keep
       - PE, CCAS and Aesthetics Teams/Aesthetics.md
       - PE, CCAS and Aesthetics Teams/CCA.md
       - PE, CCAS and Aesthetics Teams/PE, CCAS and Aesthetics Teams.md
