--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -5,7 +5,7 @@ collections:
       - CCA/CCA.md
       - CCA/.keep
       - PE, CCAS and Aesthetics Teams/Aesthetics.md
-      - PE, CCAS and Aesthetics Teams/PE, CCAS and Aesthetics Teams.md
+      - PE, CCAS and Aesthetics Teams/Physical Education.md
       - PE, CCAS and Aesthetics Teams/.keep
       - ICT Team.md
       - Mother Tongue Academic Teams/Tamil Language Unit.md
