--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,9 @@ links:
     collection: teams
   - title: Menu Title
     url: /permalink
-    sublinks: []
+    sublinks:
+      - title: Submenu Title
+        url: /permalink
   - title: key programme @ wrps
     collection: key-programme-at-wrps
   - title: info for parents
