--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -4,9 +4,9 @@ collections:
     order:
       - CCA/CCA.md
       - CCA/.keep
-      - PE, CCAS and Aesthetics Teams/.keep
-      - PE, CCAS and Aesthetics Teams/Physical Education.md
-      - PE, CCAS and Aesthetics Teams/Aesthetics.md
+      - PE, Aesthetics Teams/.keep
+      - PE, Aesthetics Teams/Physical Education.md
+      - PE, Aesthetics Teams/Aesthetics.md
       - ICT Team.md
       - Mother Tongue Academic Teams/Tamil Language Unit.md
       - Mother Tongue Academic Teams/Malay Language Unit.md
