--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,16 +7,16 @@ links:
     sublinks:
       - title: English Academic Team
         url: /teams/English-Academic-Team/permalink/
-      - title: Mathematics Acad
-        url: /teams/mathblablabla
-      - title: Science
-        url: /teams/sciblabla
-      - title: Mother Tongue
-        url: /teams/mothertongue
-      - title: ICT
-        url: /teams/ict
-      - title: PE/Aes
-        url: /teams/peaes
+      - title: Mathematics Academic Team
+        url: /teams/mathematics-academic-team/permalink/
+      - title: Science Academic Team
+        url: /teams/science-academic-team/permalink/
+      - title: Mother Tongue Academic Teams
+        url: /teams/Mother-Tongue-Academic-Teams/chinese-language-unit/permalink/
+      - title: ICT Team
+        url: /teams/ict-team/permalink/
+      - title: PE and Aesthetics Teams
+        url: /teams/physical-education/permalink/
       - title: CCAS
         url: /teams/ccas
       - title: Submenu Title
