--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ links:
         url: /teams/ict-team/permalink/
       - title: PE and Aesthetics Teams
         url: /teams/physical-education/permalink/
-      - title: CCAS
-        url: /teams/ccas
+      - title: CCA
+        url: /teams/ccas/
       - title: Submenu Title
         url: /permalink
   - title: key programme @ wrps
