--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -12,6 +12,7 @@ collections:
       - Mother Tongue Academic Teams/Malay Language Unit.md
       - Mother Tongue Academic Teams/Chinese Language Unit.md
       - ICT Team.md
+      - PE and Aesthetics Teams/Programme for Active Learning (PAL).md
       - PE and Aesthetics Teams/.keep
       - PE and Aesthetics Teams/Physical Education.md
       - PE and Aesthetics Teams/Aesthetics.md
