--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -2,6 +2,7 @@ collections:
   teams:
     output: true
     order:
+      - CCE Team/Virtual Learning Journeys.md
       - CCE Team/Values in Action (ViA).md
       - CCE Team/Sexuality Education.md
       - CCE Team/Citizenship.md
