--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -2,6 +2,7 @@ collections:
   teams:
     output: true
     order:
+      - Student Management Team/Student Well Being.md
       - Student Management Team/Discipline Team.md
       - Student Management Team/Student Management Team.md
       - Student Management Team/.keep
