--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,8 +19,8 @@ links:
         url: /teams/physical-education/permalink/
       - title: CCA
         url: /teams/ccas/
-      - title: Submenu Title
-        url: /permalink
+      - title: CCE Team
+        url: /teams/CCE-Team/permalink/
   - title: key programme @ wrps
     collection: key-programme-at-wrps
   - title: info for parents
