--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,8 @@ links:
         url: /teams/ccas/
       - title: CCE Team
         url: /teams/CCE-Team/permalink/
+      - title: Student Management Team
+        url: /teams/Student-Management-Team/permalink/
   - title: key programme @ wrps
     collection: key-programme-at-wrps
   - title: info for parents
