--- a/_key-programme-at-wrps/collection.yml
+++ b/_key-programme-at-wrps/collection.yml
@@ -2,5 +2,6 @@ collections:
   key-programme-at-wrps:
     output: true
     order:
+      - "LLP: I Can Soar Leadership.md"
       - "ALP: BeST@WRPS.md"
       - Key Programme@WRPS.md
