--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -1,4 +1,5 @@
 collections:
   info-for-parents:
     output: true
-    order: []
+    order:
+      - COE or Circulars 2022 (to be updated soon).md
