--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,4 +2,5 @@ collections:
   info-for-parents:
     output: true
     order:
+      - SLS.md
       - COE or Circulars 2022 (to be updated soon).md
