--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,5 +2,6 @@ collections:
   info-for-parents:
     output: true
     order:
+      - Homework Policy.md
       - SLS.md
       - COE or Circulars 2022 (to be updated soon).md
