--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-for-parents:
     output: true
     order:
+      - Parents in Education/PSLE.md
       - Parents in Education/Parents in Education.md
       - Parents in Education/.keep
       - Parents Briefing.md
