--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-for-parents:
     output: true
     order:
+      - Student Icon.md
       - P1 Virtual Orientation 2021/Virtual Tour of WRPS.md
       - P1 Virtual Orientation 2021/P1 Virtual Orientation 2021.md
       - P1 Virtual Orientation 2021/.keep
