--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ links:
         url: /teams/ict-team/permalink/
       - title: PE and Aesthetics Teams
         url: /teams/physical-education/permalink/
-      - title: CCA
+      - title: CCA Team
         url: /teams/ccas/
       - title: CCE Team
         url: /teams/CCE-Team/permalink/
