--- a/_news-and-events/collection.yml
+++ b/_news-and-events/collection.yml
@@ -2,5 +2,6 @@ collections:
   news-and-events:
     output: true
     order:
+      - Photo Gallery/2020.md
       - Photo Gallery/Photo Gallery.md
       - Photo Gallery/.keep
