--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,3 +27,7 @@ links:
     collection: key-programme-at-wrps
   - title: info for parents
     collection: info-for-parents
+  - title: News & events
+    collection: news-and-events
+  - title: forms
+    collection: forms-resources-useful-links
