--- a/_news-and-events/collection.yml
+++ b/_news-and-events/collection.yml
@@ -2,6 +2,7 @@ collections:
   news-and-events:
     output: true
     order:
+      - Horizon Newsletter.md
       - Photo Gallery/2020.md
       - Photo Gallery/Photo Gallery.md
       - Photo Gallery/.keep
