--- a/_forms-resources-useful-links/collection.yml
+++ b/_forms-resources-useful-links/collection.yml
@@ -2,5 +2,6 @@ collections:
   forms-resources-useful-links:
     output: true
     order:
+      - Strictly for Teachers Only.md
       - Useful Links.md
       - Forms.md
