--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,3 +29,5 @@ links:
     collection: info-for-parents
   - title: News & events
     collection: news-and-events
+  - title: Forms
+    collection: forms-resources-useful-links
