--- a/_cca-team/collection.yml
+++ b/_cca-team/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Sports/Basketball.md
       - Sports/Football.md
       - Sports/Rope Skipping.md
+      - Performing & Visual Arts/Brass Band.md
       - Performing & Visual Arts/Art & Crafts Club.md
       - Performing & Visual Arts/.keep
       - CCA Recruitment 2022.md
