{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"555"}

--- a/_cca-team/collection.yml
+++ b/_cca-team/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Sports/Basketball.md
       - Sports/Football.md
       - Sports/Rope Skipping.md
+      - Performing & Visual Arts/Indian Dance.md
       - Performing & Visual Arts/Drama & Literary Club.md
       - Performing & Visual Arts/Chinese Dance.md
       - Performing & Visual Arts/Choir.md
