--- a/_cca-team/collection.yml
+++ b/_cca-team/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Sports/Basketball.md
       - Sports/Football.md
       - Sports/Rope Skipping.md
+      - Performing & Visual Arts/Modern Dance.md
       - Performing & Visual Arts/Malay Dance.md
       - Performing & Visual Arts/Indian Dance.md
       - Performing & Visual Arts/Drama & Literary Club.md
