--- a/_cca-team/collection.yml
+++ b/_cca-team/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca-team:
     output: true
     order:
+      - Clubs & Uniform Groups/Scouts.md
       - Clubs & Uniform Groups/.keep
       - CCA overview.md
       - Sports/.keep
