--- a/_cca-team/collection.yml
+++ b/_cca-team/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Sports/Badminton.md
       - Sports/Basketball.md
       - Sports/Football.md
-      - Sports/Rope Skipping.md
+      - Sports/Floorball.md
       - Performing & Visual Arts/.keep
       - Performing & Visual Arts/Art & Crafts Club.md
       - Performing & Visual Arts/Brass Band.md
