{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1164"}

--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -12,6 +12,6 @@ collections:
       - Parents in Education/PSLE.md
       - Covid Precautionary Measures.md
       - P1 Virtual Orientation 2024/.keep
-      - P1 Virtual Orientation 2024/P1 Virtual Orientation 2021.md
+      - P1 Virtual Orientation 2024/P1 Virtual Orientation.md
       - P1 Virtual Orientation 2024/Virtual Tour of WRPS.md
       - Student Icon.md
