--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,7 +2,7 @@ collections:
   info-for-parents:
     output: true
     order:
-      - COE or Circulars 2023 (to be updated soon).md
+      - COE or Circulars 2023 (updated termly).md
       - SLS.md
       - Homework Policy.md
       - Financial Assistance.md
