--- a/_about-wrps/collection.yml
+++ b/_about-wrps/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Principal's Message.md
       - Organisational Chart 2023/.keep
-      - Organisational Chart 2023/Organisational Chart.md
+      - Organisational Chart 2023/School Leaders.md
       - Organisational Chart 2023/School Management Committee.md
       - Our Identity/.keep
       - Our Identity/School Crest.md
