{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1164"}

--- a/_about-wrps/collection.yml
+++ b/_about-wrps/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Principal's Message.md
+      - Organisational Chart 2023/Executive and Administration Staff (EAS).md
       - Organisational Chart 2023/.keep
       - Organisational Chart 2023/School Leaders.md
       - Organisational Chart 2023/School Management Committee.md
