--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -18,7 +18,7 @@ collections:
       - PE and Aesthetics Teams/Programme for Active Learning (PAL).md
       - CCE Team/.keep
       - CCE Team/CCE Team.md
-      - CCE Team/Citizenship.md
+      - CCE Team/National Education.md
       - CCE Team/Sexuality Education.md
       - CCE Team/Values in Action (ViA).md
       - CCE Team/Virtual Learning Journeys.md
