{"message":"Update file: footer.yml","fileName":"footer.yml","userId":"1164"}

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,4 +4,4 @@ faq: /faq/
 social_media:
   facebook: https://www.facebook.com/woodlandsringprimaryschool
   youtube: https://www.youtube.com/YourYoutube
-  instagram: www.instagram.com/woodlandsringprimaryschool
+  instagram: https://www.instagram.com/woodlandsringprimaryschool
