--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,4 @@
 contact_us: /contact-us/
 show_reach: false
 faq: /faq/
-social_media:
-  facebook: https://www.facebook.com/woodlandsringprimaryschool
-  youtube: https://www.youtube.com/YourYoutube
-  instagram: https://www.instagram.com/woodlandsringprimaryschool
+social_media: {}
