--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-for-parents:
     output: true
     order:
+      - Test.md
       - Sale of School Uniform.md
       - COE or Circulars 2023 (updated termly).md
       - SLS.md
