--- a/_forms-resources-useful-links/collection.yml
+++ b/_forms-resources-useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   forms-resources-useful-links:
     output: true
     order:
+      - Example Title.md
       - Lunch Pass 2024.md
       - Canteen.md
       - Transport Information.md
