{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_forms-resources-useful-links/collection.yml
+++ b/_forms-resources-useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   forms-resources-useful-links:
     output: true
     order:
+      - Booklist 2024.md
       - Canteen.md
       - Transport Information.md
       - Forms.md
