--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Woodlands Ring Primary School
-url: https://www.open.gov.sg
+url: https://woodlandsringpri.moe.edu.sg
 favicon: /images/favicon-isomer.ico
 colors:
   primary-color: "#6031b6"
