--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-for-parents:
     output: true
     order:
+      - Parents Support Group.md
       - Primary One Orientation 2024.md
       - Sale of School Uniform.md
       - Lunch Pass 2024.md
