--- a/_forms-resources-useful-links/collection.yml
+++ b/_forms-resources-useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   forms-resources-useful-links:
     output: true
     order:
+      - WRPS Student Group Insurance.md
       - Booklist 2024.md
       - Canteen.md
       - Transport Information.md
