--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Woodlands Ring Primary School
 url: https://woodlandsringpri.moe.edu.sg
-favicon: /images/favicon-isomer.ico
+favicon: /images/school logo-main.png
 colors:
   primary-color: "#6031b6"
   secondary-color: "#4372d6"
