{"message":"Update file: _config.yml","userId":"4398","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Woodlands Ring Primary School
 url: https://woodlandsringpri.moe.edu.sg
-favicon: /images/wrps_school_crest.jpg
+favicon: /images/Website_Tab_Img.jpg
 colors:
   primary-color: "#6031b6"
   secondary-color: "#4372d6"
