--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   info-for-parents:
     output: true
     order:
+      - Transport Information.md
       - Lunch Pass 2024.md
       - Parents Briefing.md
       - COE or Circulars 2024 (updated termly).md
