{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -15,6 +15,7 @@ collections:
       - PE and Aesthetics Teams/.keep
       - PE and Aesthetics Teams/Physical Education.md
       - PE and Aesthetics Teams/Aesthetics.md
+      - CCE Team/Programme for Active Learning (PAL).md
       - CCE Team/.keep
       - CCE Team/CCE Team.md
       - CCE Team/National Education.md
