{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -5,7 +5,7 @@ collections:
       - English/.keep
       - English/English Academic Team.md
       - English/Hooked On Reading.md
-      - Mathematics Academic Team.md
+      - Mathematics.md
       - Science Academic Team.md
       - Mother Tongue Academic Teams/.keep
       - Mother Tongue Academic Teams/Chinese Language Unit.md
