{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -6,7 +6,7 @@ collections:
       - English/English Academic Team.md
       - English/Hooked On Reading.md
       - Mathematics.md
-      - Science Academic Team.md
+      - Science.md
       - Mother Tongue Academic Teams/.keep
       - Mother Tongue Academic Teams/Chinese Language Unit.md
       - Mother Tongue Academic Teams/Malay Language Unit.md
