{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -7,10 +7,10 @@ collections:
       - English/Hooked On Reading.md
       - Mathematics.md
       - Science.md
-      - Mother Tongue Academic Teams/.keep
-      - Mother Tongue Academic Teams/Chinese Language Unit.md
-      - Mother Tongue Academic Teams/Malay Language Unit.md
-      - Mother Tongue Academic Teams/Tamil Language Unit.md
+      - Mother Tongue/.keep
+      - Mother Tongue/Chinese Language Unit.md
+      - Mother Tongue/Malay Language Unit.md
+      - Mother Tongue/Tamil Language Unit.md
       - ICT Team.md
       - PE and Aesthetics Teams/.keep
       - PE and Aesthetics Teams/Physical Education.md
