--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -12,9 +12,9 @@ collections:
       - Mother Tongue/Malay Language Unit.md
       - Mother Tongue/Tamil Language Unit.md
       - ICT Team.md
-      - PE and Aesthetics Teams/.keep
-      - PE and Aesthetics Teams/Physical Education.md
-      - PE and Aesthetics Teams/Aesthetics.md
+      - PE and Aesthetics/.keep
+      - PE and Aesthetics/Physical Education.md
+      - PE and Aesthetics/Aesthetics.md
       - CCE Team/.keep
       - CCE Team/CCE Team.md
       - CCE Team/National Education.md
