--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -21,7 +21,7 @@ collections:
       - CCE Team/Sexuality Education.md
       - CCE Team/Values in Action (ViA).md
       - CCE Team/Programme for Active Learning (PAL).md
-      - Student Management Team/.keep
-      - Student Management Team/Student Management Team.md
-      - Student Management Team/Discipline Team.md
-      - Student Management Team/Student Well Being.md
+      - Student Management/.keep
+      - Student Management/Student Management Team.md
+      - Student Management/Discipline Team.md
+      - Student Management/Student Well Being.md
