{"message":"Update file: navigation.yml","userId":"3568","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,23 @@ links:
   - title: Teams
     url: /teams/English-Academic-Team/permalink/
     sublinks:
-      - title: English Academic Team
+      - title: English
         url: /teams/English-Academic-Team/permalink/
-      - title: Mathematics Academic Team
+      - title: Mathematics
         url: /teams/mathematics-academic-team/permalink/
-      - title: Science Academic Team
+      - title: Science
         url: /teams/science-academic-team/permalink/
-      - title: Mother Tongue Academic Teams
+      - title: Mother Tongue
         url: /teams/Mother-Tongue-Academic-Teams/chinese-language-unit/permalink/
-      - title: ICT Team
+      - title: ICT
         url: /teams/ict-team/permalink/
-      - title: PE and Aesthetics Teams
+      - title: PE and Aesthetics
         url: /teams/physical-education/permalink/
-      - title: CCA Team
+      - title: CCA
         url: /teams/ccas/
-      - title: CCE Team
+      - title: CCE
         url: /teams/CCE-Team/permalink/
-      - title: Student Management Team
+      - title: Student Management
         url: /teams/Student-Management-Team/permalink/
   - title: key programme @ wrps
     collection: key-programme-at-wrps
