{"message":"Update file: navigation.yml","userId":"3568","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ links:
         url: /teams/science-academic-team/permalink/
       - title: Mother Tongue
         url: /teams/Mother-Tongue-Academic-Teams/chinese-language-unit/permalink/
-      - title: ICT
+      - title: InfoComm Technology
         url: /teams/ict-team/permalink/
       - title: PE and Aesthetics
         url: /teams/physical-education/permalink/
