{"message":"Update file: navigation.yml","userId":"3568","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ links:
         url: /teams/physical-education/permalink/
       - title: CCA
         url: /teams/ccas/
-      - title: CCE
+      - title: Character and Citizenship
         url: /teams/CCE-Team/permalink/
       - title: Student Management
         url: /teams/Student-Management-Team/permalink/
