{"message":"Update file: collection.yml","userId":"4398","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Mother Tongue/Chinese Language Unit.md
       - Mother Tongue/Malay Language Unit.md
       - Mother Tongue/Tamil Language Unit.md
-      - ICT Team.md
+      - InfoComm Technology.md
       - PE and Aesthetics/.keep
       - PE and Aesthetics/Physical Education.md
       - PE and Aesthetics/Aesthetics.md
