{"message":"Update file: collection.yml","userId":"4398","fileName":"collection.yml"}

--- a/_about-wrps/collection.yml
+++ b/_about-wrps/collection.yml
@@ -16,4 +16,5 @@ collections:
       - Our Heritage.md
       - Our Achievements.md
       - Privacy Policy.md
+      - Privacy Policy/Testing Page.md
       - Privacy Policy/.keep
