--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Transport Information.md
       - Lunch Pass 2024.md
-      - Parents Briefing.md
+      - Parents Engagement.md
       - COE or Circulars 2024 (updated termly).md
       - Parents Support Group.md
       - Primary One Orientation 2025.md
