--- a/_forms-resources-useful-links/collection.yml
+++ b/_forms-resources-useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   forms-resources-useful-links:
     output: true
     order:
+      - MOE Leave of Absence.md
       - WRPS Student Group Insurance.md
       - Canteen.md
       - Useful Links.md
