{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -2,7 +2,7 @@ collections:
   info-for-parents:
     output: true
     order:
-      - Primary One Orientation 2025.md
+      - P1 Parents' Primer and Connect Session 2025.md
       - Booklist 2025.md
       - Transport Information.md
       - Lunch Pass 2024.md
