{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_info-for-parents/collection.yml
+++ b/_info-for-parents/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Transport Information.md
       - Lunch Pass 2025.md
       - Parents Engagement.md
-      - COE or Circulars 2024 (updated termly).md
+      - COE 2025.md
       - Parents Support Group.md
       - Sale of School Uniform.md
       - SLS.md
