{"message":"Update file: collection.yml","userId":"3535","fileName":"collection.yml"}

--- a/_about-wrps/collection.yml
+++ b/_about-wrps/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-wrps:
     output: true
     order:
+      - Engagement Charter.md
       - Principal's Message.md
       - Our People/.keep
       - Our People/School Leaders.md
