{"message":"Update file: collection.yml","userId":"3568","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -20,6 +20,7 @@ collections:
       - CCE Team/Sexuality Education.md
       - CCE Team/Values in Action (ViA).md
       - CCE Team/Programme for Active Learning (PAL).md
+      - Student Management/Policy and Guidelines.md
       - Student Management/.keep
       - Student Management/Student Management Team.md
       - Student Management/Discipline Team.md
