{"message":"Update file: collection.yml","userId":"3568","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -15,7 +15,7 @@ collections:
       - PE and Aesthetics/Physical Education.md
       - PE and Aesthetics/Aesthetics.md
       - CCE Team/.keep
-      - CCE Team/CCE Team.md
+      - CCE Team/Character and Citizenship Education.md
       - CCE Team/National Education.md
       - CCE Team/Sexuality Education.md
       - CCE Team/Values in Action (ViA).md
