--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -15,7 +15,7 @@ collections:
       - PE and Aesthetics/Physical Education.md
       - PE and Aesthetics/Aesthetics.md
       - CCE/.keep
-      - CCE/Character and Citizenship Education.md
+      - CCE/CCE Team.md
       - CCE/National Education.md
       - CCE/Sexuality Education.md
       - CCE/Values in Action (ViA).md
