--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -2,6 +2,7 @@ collections:
   teams:
     output: true
     order:
+      - Partnership/.keep
       - English/.keep
       - English/English.md
       - Mathematics.md
