{"message":"Update file: navigation.yml","userId":"3568","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ links:
       - title: CCA
         url: /teams/ccas/
       - title: Character and Citizenship
-        url: /teams/CCE-Team/permalink/
+        url: /teams/CCE/permalink/
       - title: Student Management
         url: /teams/Student-Management-Team/permalink/
   - title: key programme @ wrps
