{"message":"Update file: navigation.yml","userId":"3568","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,6 +23,8 @@ links:
         url: /teams/cce/permalink/
       - title: Student Management
         url: /teams/Student-Management-Team/permalink/
+      - title: Partnership
+        url: /permalink
   - title: key programme @ wrps
     collection: key-programme-at-wrps
   - title: info for parents
