{"message":"Update file: collection.yml","userId":"4398","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -14,12 +14,12 @@ collections:
       - PE and Aesthetics/.keep
       - PE and Aesthetics/Physical Education.md
       - PE and Aesthetics/Aesthetics.md
-      - CCE Team/.keep
-      - CCE Team/CCE Team.md
-      - CCE Team/National Education.md
-      - CCE Team/Sexuality Education.md
-      - CCE Team/Values in Action (ViA).md
-      - CCE Team/Programme for Active Learning (PAL).md
+      - CCE/.keep
+      - CCE/CCE Team.md
+      - CCE/National Education.md
+      - CCE/Sexuality Education.md
+      - CCE/Values in Action (ViA).md
+      - CCE/Programme for Active Learning (PAL).md
       - Partnership/.keep
       - Student Management/.keep
       - Student Management/Student Management Team.md
