{"message":"Update file: collection.yml","userId":"3568","fileName":"collection.yml"}

--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -20,6 +20,7 @@ collections:
       - CCE/Sexuality Education.md
       - CCE/Values in Action (ViA).md
       - CCE/Programme for Active Learning (PAL).md
+      - Partnership/PSG.md
       - Partnership/Integration.md
       - Partnership/TIE.md
       - Partnership/.keep
