--- a/_teams/collection.yml
+++ b/_teams/collection.yml
@@ -20,6 +20,7 @@ collections:
       - CCE/Sexuality Education.md
       - CCE/Values in Action (ViA).md
       - CCE/Programme for Active Learning (PAL).md
+      - Partnership/Alumni.md
       - Partnership/.keep
       - Partnership/TIE.md
       - Partnership/Integration.md
