{"message":"Update file: navigation.yml","userId":"4398","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ links:
       - title: Student Management
         url: /teams/Student-Management-Team/permalink/
       - title: Partnership
-        url: /permalink
+        url: /tie/
   - title: key programme @ wrps
     collection: key-programme-at-wrps
   - title: info for parents
